--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="#label20250126">
 <span class="today_title">
 最新:
-本の厚さが５センチ
+本の厚さが５センチ ２０２５．０７.１９
 </span>
 </a>
 <h3>【ヤンバルの鷹さん】とは　一日だけのプログです</h3>
